# vemb

./: .gitignore  README.md  pyproject.toml
src/vemb/: cli.py  embed.py
tests/: test_cli.py  test_embed.py
